--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,12 @@ h2 {
     background-color: #cccbcb67;
 }
 
+img {
+    width: 100%;
+    display: block;
+    margin: auto;
+}
+
 /* --- Footer --- */
 
 footer {
