--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ section > h1 {
     text-decoration: underline;
 }
 
+section h1:hover {
+    color: #D91E2E;
+}
+
 section > p {
     padding-left: 20px;
     display: list-item;
