--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ header {
     color: white;
     font-family: var(--fonte1);
     text-align: center;
+    box-shadow: 3px 3px 40px black
 }
 
 header > h1 {
